# odigos

./: .dockerignore  .env.sample  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CI_FAILURE_INVESTIGATION.md  CONTRIBUTING.md  DESTINATIONS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.rhel  GRPC_OAUTH2_TLS_FIX.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  Makefile  Makefile.cli  Makefile.depot  OAUTH2_FIX_DEMONSTRATION.md  OAUTH2_IMPLEMENTATION_SUMMARY.md  ODIGLET_MEMORY_IMPROVEMENT.md  PLAN.md  README.md  SECURITY.md  ServiceMonitor_CLI_Examples.md  ServiceMonitor_Feature_Implementation.md  TLS_CONFIG_OPTIMIZATION_SUMMARY.md  VERSIONING.md  application.yaml  coupon-deployment-with-healthz.yaml  data-streams-kubeletstats-fix-summary.md  depot.json  docker-bake.hcl  e2e-test.sh  extract-attribute-processor-resource-path.yaml  extract-attribute-processor-studies.yaml  extract-attribute-processor.yaml  genref-config.yaml  (+13 more)
odigos-agent/agent/: Dockerfile  pyproject.toml
odigos-agent/agent/src/odigos_agent/: api.py  approvals.py  cli.py  events.py  graph.py  mcp_client.py  prompts.py  serve.py  state.py
odigos-agent/agent/tests/: test_api.py  test_approvals.py  test_events.py  test_extraction.py  test_routing.py  test_state.py
odigos-agent/graph-mcp/: .dockerignore  Dockerfile  pyproject.toml
odigos-agent/graph-mcp/graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md
odigos-agent/graph-mcp/graphify-out/wiki/: Action_CR_Docs.md  Action_Docs_(Attribute_Mutation).md  Action_GraphQL_Schema.md  Action_Resolver_Logic.md  Agent_Config_Calculation.md  Agent_SDK_Config_CRD.md  Architecture_Overview_Docs.md  Auto-Instrumentation_Docs.md  Autoscaler_Collector_Config_Domains.md  Autoscaler_Collector_Group_Sync.md  Autoscaler_ConfigMap_Sync.md  Autoscaler_ConfigMap_Tests.md  Autoscaler_Deployment_Sync.md  Autoscaler_K8sAttributes_Resolver.md  Autoscaler_Manager_Main.md  Autoscaler_Node_Collector_Sync.md  Autoscaler_Profiling_OTLP_Config.md  (+491 more)
odigos-agent/graph-mcp/tests/: test_tools.py
tests/rust-otel-app/: Cargo.toml  Dockerfile  k8s.yaml
tests/rust-otel-app/src/: main.rs
(+6724 files in other folders)
