[project]
name = "odigos-agent"
version = "0.0.1"
description = "LangGraph-based diagnostic agent for odigos. Talks to a cluster MCP and a codebase-graph MCP."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langgraph-prebuilt>=1.1.0",
    "langchain-anthropic>=1.0.0",
    "langchain-mcp-adapters>=0.2.2",
    "mcp>=1.2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odigos_agent"]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
odigos-agent = "odigos_agent.cli:main"
odigos-agent-serve = "odigos_agent.serve:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
