[project]
name = "odigos-agent-graph-mcp"
version = "0.0.1"
description = "MCP server exposing the bundled Graphify knowledge graph and wiki for the odigos AI agent."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "networkx>=3.3",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
